# muphrid

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  checkpoints.db.corrupt-20260429-020010  equipment.toml  hitl_config.toml  langgraph.json  processing.toml  prompt_notes.md  pyproject.toml
.cursor/rules/: engineering-philosophy.mdc  verify-before-coding.mdc
.langgraph_api/: .langgraph_ops.pckl
astro_agent/: __main__.py  app.py  cli.py  config.py  equipment.py  gradio_app.py
astro_agent/graph/: __init__.py  graph.py  hitl.py  nodes.py  prompts.py  registry.py  state.py
astro_agent/memory/: __init__.py  embeddings.py  extraction.py  store.py
astro_agent/report/: render.py
astro_agent/tools/: _sensor.py  _siril.py
docs/: long_term_memory_design.md  long_term_memory_v2_roadmap.md
docs/audit/: AUDIT_2026-04-18.md  README.md  prompts_nonlinear_rewrite.md  t09_gradient_patch.md  t31_checkpoint_patch.md  t34_masked_process.py.stub  v2_docstrings.md  v2_framework_fixes.md  v2_prompts.md  v2_tool_gaps.md  v3_prompts.md
muphrid/: __main__.py  cli.py  config.py  equipment.py  gradio_app.py  sessions.py
muphrid/graph/: __init__.py  content.py  graph.py  hitl.py  memory.py  nodes.py  prompts.py  registry.py  regression.py  review.py  state.py
plan/: AstroAgent_Plan.md  AstroAgent_Spec.md  LongTermMemory_Plan.md  LongTermMemory_Spec.md  plan.md
scripts/: check_flat_quality.py  clone_thread.py  diagnose_calibration.py  hitl_variant_loop_poc.py  inspect_thread.py  recover_checkpoint_db.py  run_manual_pipeline.py  test_hitl_review_mode.py  test_image_space.py  test_pipeline.py  test_selective_star_reblend.py  test_vlm_retention.py  verify_command_builders.py  verify_math_integrity.py  verify_pahse_3.py  verify_phase_0_1.py  verify_phase_2.py  verify_phase_4.py  verify_phase_5.py
(+81 files in other folders)
